--- a/factom-identity-server/src/main/resources/application.properties
+++ b/factom-identity-server/src/main/resources/application.properties
@@ -15,4 +15,10 @@
 #
 
 factomd.url=http://136.144.204.97:8088/v2
+factomd.timeout=60
+factomd.threads=6
 walletd.url=http://136.144.204.97:8089/v2
+walletd.timeout=25
+walletd.threads=2
+walletd.mode=OFFLINE_SIGNING
+debug=true
