--- a/frameworks/spring-boot-support/src/test/resources/application.properties
+++ b/frameworks/spring-boot-support/src/test/resources/application.properties
@@ -20,3 +20,6 @@ factomd.threads=6
 walletd.url=http://136.144.204.97:8089/v2
 walletd.timeout=25
 walletd.threads=2
+walletd.signing-mode=walletd
+#walletd.signing-mode=offline # Requires private EC/FCT addresses; does not use walletd to sign transactions
+#walletd.signing-mode=online # (used walletd)
