--- a/build.gradle
+++ b/build.gradle
@@ -365,7 +365,7 @@ project(':frameworks:spring-boot-support') {
         // Explicit dep on CDI, since it might not be on classpath of the spring boot application
         compile "javax.enterprise:cdi-api:$libVersions.jee.cdiApi"
         compileOnly "org.springframework.boot:spring-boot-starter:$libVersions.spring.boot"
-        compileOnly project(":factom-client-offline-signing")
+        compile project(":factom-client-offline-signing")
         testCompile project(":service-providers:logger-slf4j")
         testCompile project(":service-providers:json-converter-gson")
         testCompile "com.google.code.gson:gson:$libVersions.gson"
