--- a/build.gradle
+++ b/build.gradle
@@ -434,6 +434,23 @@ project(':factom-client-tests') {
     }
 }
 
+project(':factom-accumulate-client-tests') {
+    apply plugin: "java"
+    dependencies {
+        compile "org.slf4j:slf4j-simple:$libVersions.slf4j"
+        testCompile project(':service-providers:logger-slf4j')
+        testCompile project(':factom-client-impl-accumulate')
+        testCompile project(':factom-client-offline-signing')
+        testCompile project(':service-providers:json-converter-gson')
+        testCompile project(':iot-sas')
+        testCompile "org.mock-server:mockserver-netty:5.4.1"
+        testCompile "org.mock-server:mockserver-client-java:5.4.1"
+        testCompile "org.glassfish:javax.json:$testVersions.jee.javaxJson"
+        testCompile "org.eclipse:yasson:$testVersions.jee.yasson"
+        testCompile 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
+    }
+}
+
 
 project(':docs') {
 
