--- a/factom-client-tests/src/test/resources/settings.properties
+++ b/factom-client-tests/src/test/resources/settings.properties
@@ -14,5 +14,5 @@
 # limitations under the License.
 #
 
-factomd.url=http://136.144.204.97:8088/v2
+factomd.url=http://ms01.cloud.sphereon.com:8088/v2
 walletd.url=http://136.144.204.97:8089/v2
