ADID-11: Working on reveal-chain & ackTransaction

--- a/factom-accumulate-client-tests/src/test/resources/settings.properties
+++ b/factom-accumulate-client-tests/src/test/resources/settings.properties
@@ -14,5 +14,6 @@
 # limitations under the License.
 #
 
-factomd.url=https://beta.testnet.accumulatenetwork.io/v2
+#factomd.url=https://beta.testnet.accumulatenetwork.io/v2
+factomd.url=http://127.0.1.1:26760/v2
 
