--- a/factom-accumulate-client-tests/src/test/resources/settings.properties
+++ b/factom-accumulate-client-tests/src/test/resources/settings.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 #
 
-#factomd.url=https://beta.testnet.accumulatenetwork.io/v2
+#testnet.factomd.url=https://beta.testnet.accumulatenetwork.io/v2
 factomd.url=http://127.0.1.1:26760/v2
+testnet.factomd.url=http://127.0.1.1:26760/v2
 
