ADID-11: saving work before revert

--- a/factom-accumulate-client-tests/src/test/resources/settings.properties
+++ b/factom-accumulate-client-tests/src/test/resources/settings.properties
@@ -16,5 +16,7 @@
 
 #testnet.factomd.url=https://beta.testnet.accumulatenetwork.io/v2
 factomd.url=http://127.0.1.1:26760/v2
+leveldbserver.url=http://192.168.1.103:6060
 testnet.factomd.url=http://127.0.1.1:26760/v2
+testnet.leveldbserver.url=http://192.168.1.103:6060
 
